# eleicoes_urna_eletronica

./: .env.example  .gitignore  Pipfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini  readme.md
.docker/backend/: Dockerfile
.github/workflows/: actions.yml  pythonapp.yml
.old/controllers/: votes.py
.old/controllers/tests/: BallotBoxModel_model.json  Vote_model.json  test_controllers.py
.old/models/: candidates.py
.old/models/tests/: __init__.py  test_models.py
.old/utils/: qrcode_gen.py
.old/utils/blockchain/: block.py  hash.py
.old/utils/controllers/: abstract.py
.old/utils/models/: __init__.py  abstracts.py  text_file.py
.old/utils/tests/: test_utils.py
.old/views/: __init__.py
backend/: app.py
backend/static/: scripts.js  styles.css
backend/templates/: index.html
blockchain/: classes.py
controllers/: ballot_boxes.py
controllers/tests/: test_controllers.py
core/: main.py
core/models/: classes.py  partidos.py
core/processors/: classes.py
core/utils/: datetime.py
docs/: doc_analise_01.md
models/: ballot_boxes.py  classes.py  elections.py  votes.py
models/tests/: test_models.py
processors/: classes.py
resources/: cryptography_key.pem  eleicao.json  private_key.pem
utils/: qr_code_gen.py  qrcode_gen.py  security.py  settings.py
utils/blockchain/: manager.py
utils/controllers/: __init__.py
utils/models/: abstracts.py  bases.py  text_file.py
utils/patterns/: singleton_meta.py
utils/tests/: __init__.py
