[tool.poetry]
name = "eleicoes-urna-eletronica"
version = "0.1.0"
description = ""
authors = ["Marcus Vinicus Braga <mvbraga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"
pyzbar = "^0.1.9"
pickle-mixin = "^1.0.2"
pydantic = "^2.7.2"
scikit-learn = "^1.5.0"
cryptography = "^42.0.7"
qrcode = "^7.4.2"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
loguru = "^0.7.2"
redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
pytest = "^8.2.1"
flake8 = "^7.0.0"
codecov = "^2.1.13"
coverage = "^7.5.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
